--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-uglify": "^3.0.0",
+    "jsdom": "^11.1.0",
     "mocha": "^3.4.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
